Fixed shapeshift column width.

--- a/src/geoffrey/web/assets/css/geoffrey.css
+++ b/src/geoffrey/web/assets/css/geoffrey.css
@@ -12,7 +12,7 @@
     position: absolute; 
 }
 
-#dashboard div[data-ss-colspan="1"] { width: 25%; }
-#dashboard div[data-ss-colspan="2"] { width: 50%; }
-#dashboard div[data-ss-colspan="3"] { width: 75%; }
-#dashboard div[data-ss-colspan="4"] { width: 100%; }
+#dashboard div[data-ss-colspan="1"] { width: 23%; }
+#dashboard div[data-ss-colspan="2"] { width: 48%; }
+#dashboard div[data-ss-colspan="3"] { width: 73%; }
+#dashboard div[data-ss-colspan="4"] { width: 98%; }
